[tool.poetry]
name = "gcn-classic-to-kafka"
version = "0.1.0"
description = "Pump GCN Notices to a Kafka broker"
license = "Apache-2.0"
authors = ["Leo Singer <leo.singer@ligo.org>"]

[tool.poetry.dependencies]
click = "*"
gcn-kafka = "^0.3.3"
python = "^3.10"
pygcn = "*"
prometheus-client = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"

[tool.poetry.scripts]
gcn-classic-to-kafka = "gcn_classic_to_kafka.cli:main"

[tool.coverage.run]
source = [
    "gcn_classic_to_kafka"
]
omit = [
    "*/test/*"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
